tenzir/bats/data/reference/every/test_every_errors/step_00.ref
error: could not parse token
 --> <input>:1:11
  |
1 | every 1s { from "./this-file-does-not-exist.json" }
  |           ^^ 
  |